--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "sass": "^1.26.11"
+    "react-dom": "16.13.1"
   }
 }
